--- a/source/index.pug
+++ b/source/index.pug
@@ -5,7 +5,8 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
+        link(rel="stylesheet", href="css/style.css")
     body
         h1 My Front End Starter Kit
-        img(src='/dist/img/front-end-kids.png')
-        script(src='/dist/js/index.min.js')
+        img.card(src='img/front-end-kids.png')
+        script(src='js/all.js')
