--- a/source/index.pug
+++ b/source/index.pug
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-html(lang="en")
+html(lang="zh-TW")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -7,6 +7,8 @@ html(lang="en")
         title Document
         link(rel="stylesheet", href="css/style.css")
     body
-        h1 My Front End Starter Kit
-        img.card(src='img/front-end-kids.png')
+        h1.text-red My Front End Starter Kit
+        img.card-rotate(src='img/front-end-kids.png')
+        img(src='img/skill-tree.jpg')
+        script(src="js/vendors.js")
         script(src='js/all.js')
