--- a/source/index.pug
+++ b/source/index.pug
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-html(lang="zh-TW")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
-        link(rel="stylesheet", href="css/style.css")
-    body
-        h1.text-red My Front End Starter Kit
-        img.card-rotate(src='img/front-end-kids.png')
-        img(src='img/skill-tree.jpg')
-        script(src="js/vendors.js")
-        script(src='js/all.js')
+extend _layout.pug
+
+block navbar
+    - var path = 'index.html'
+    include partials/navbar.pug
+
+block content
+    h1.text-red My Front End Starter Kit
+    img.card-rotate(src='img/front-end-kids.png')
+    script(src="js/vendors.js")
+    script(src='js/all.js')
